--- a/13-Artificial intelligence (Transformer)/Tiny_GPT.ipynb
+++ b/13-Artificial intelligence (Transformer)/Tiny_GPT.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This program require high computational ressources for training. We think that this program is ready for training"
+        "This program requires high computational ressources for training. We think that this program is ready for training"
       ],
       "metadata": {
         "id": "NGU4wnBDbX_7"
